# business-venture

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Asset.cpp.CBD49D6D91FB0608.idx  Asset.hpp.A2B108B9852F37EF.idx  Building.cpp.2B782FB0F9D5E7F9.idx  Building.hpp.940C23F61F76B260.idx  Debug.hpp.FE287CBD9F1FB827.idx  Entity.cpp.4CA98EE559D61738.idx  Entity.hpp.063FD5632A599629.idx  Game.cpp.AE26E0855A936634.idx  Game.hpp.7BD36E7B17D85E41.idx  Ground.hpp.84F4BDC3FA29A468.idx  Shader.cpp.B54CEA1EB7F9E102.idx  Shader.hpp.0136FFCF4A6A16B3.idx  glad.c.AC7ECDFDBE907421.idx  glad.h.3C894CC76F5AEA45.idx  imconfig.h.5D304E200EC9E75E.idx  imgui.cpp.03CFCCF36217CDE2.idx  imgui.h.432343C505381160.idx  imgui_impl_glfw.h.3FA14C690216267A.idx  imgui_impl_opengl3.h.9F1608AAA6CC36DD.idx  imgui_internal.h.EC520F6112C96357.idx  khrplatform.h.448DB55DFA70EA4B.idx  main.cpp.3D1A1F054799AC4D.idx  stb_image.c.FF19B4E103374B36.idx  stb_image.h.11B37B07E1F9034A.idx
.github/workflows/: build.yml
include/glad/: glad.h
shaders/: shader.frag
src/core/: Asset.cpp  Asset.hpp  Game.cpp  Game.hpp  Shader.cpp  Shader.hpp
src/debug/: Debug.hpp
src/entity/: Building.cpp  Building.hpp  Cube.cpp  Cube.hpp  Entity.cpp  Entity.hpp  Ground.hpp
src/event/: Decision.cpp  Decision.hpp
